Answers appear only on selected question type, screen no longer jumps on radio button clicks - NS JH

--- a/public/stylesheets/create-quiz.css
+++ b/public/stylesheets/create-quiz.css
@@ -29,10 +29,6 @@ maker-question > span{
     padding: 0em 3em;
 }
 
-/*maker-question span {
-    padding 1.5em;
-}*/
-
 maker-question .flex:first-child > * {
     margin-bottom:.5em;
 }
@@ -40,6 +36,7 @@ maker-question .flex:first-child > * {
 maker-question .text-input {
     border-bottom: solid 0.15rem #A19AA0;
     width: 100%;
+    resize: vertical;
 }
 
 maker-question select {
@@ -52,6 +49,7 @@ maker-question select {
 
 maker-question input[type=range]{
     -webkit-appearance: none;
+    -moz-appearance: none;
     display: block;
     width:100%;
     padding: .5em 0em;
@@ -67,6 +65,24 @@ maker-question input[type=range]::-webkit-slider-runnable-track {
 
 maker-question input[type=range]::-webkit-slider-thumb {
     -webkit-appearance: none;
+    border: none;
+    height: 1em;
+    width: 1em;
+    border-radius: 50%;
+    background: #A3709C;
+    margin-top: -.3em;
+}
+
+maker-question input[type=range]::-moz-range-track {
+    width: 100%;
+    height: .4em;
+    background: #BF9BBA;
+    border: none;
+    border-radius: 5em;
+}
+
+maker-question input[type=range]::-moz-range-thumb {
+    -moz-appearance: none;
     border: none;
     height: 1em;
     width: 1em;
@@ -156,6 +172,7 @@ maker-question input[type=range]::-webkit-slider-thumb {
   padding: 0; 
   position: absolute; 
   width: 1px;
+  visibility: hidden;
 }
 
 fieldset {
